--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@picojs/pico": "^0.3.2",
     "face-api.js": "^0.22.2",
+    "framer-motion": "^12.6.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
     "react-speech-recognition": "^4.0.0"
   },
   "devDependencies": {
